fix: overlap

--- a/src/Components/Donate/Layout/DonateSteps/DonateSteps.css
+++ b/src/Components/Donate/Layout/DonateSteps/DonateSteps.css
@@ -14,7 +14,7 @@
 @media only screen and (max-width: 768px) {
   #Donate-Steps-Wrapper {
     transform: scale3d(0.8, 1, 1);
-    margin-top: -5rem;
+    margin-top: -9rem;
   }
 }
 
@@ -22,7 +22,7 @@
 @media only screen and (max-width: 576px) {
   #Donate-Steps-Wrapper {
     transform: scale3d(0.8, 1, 1);
-    margin-top: -5rem;
+    margin-top: -9rem;
   }
 }
 
